--- a/login e cadastro/login.html
+++ b/login e cadastro/login.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Form</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Login Form</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
 	<div class="login-form">
 		<div class="logo">
-			<img src="Peri.jpg" alt="Peri Logo">
+			<img src="./img/Peri.jpg" alt="Peri Logo">
 			<h1>Bem-vinde ao Peri</h1>
 		</div>
 		<form>
@@ -21,4 +23,5 @@
 		</form>
 	</div>
 </body>
+
 </html>
